--- a/assets/socialmedia.org
+++ b/assets/socialmedia.org
@@ -1,8 +1,28 @@
 * Requests
-** Sent  
-** Want
-* Email templates
+Sci Fi
+https://www.fictionpress.com/fiction/Sci-Fi/?&srt=4&lan=1&r=103&t=15&p=3  
+
+
+** Avatar: Last Airbender (41.4K)
+https://www.fanfiction.net/cartoon/Avatar-Last-Airbender/?&srt=4&lan=1&r=103&t=15&p=3
+/r/TheLastAirbender/ - 161k
+**** Sent
+akaiiko
+isnt-it-pretty
+**** Submitted
+
+* Templates
 ** Messages
+**** FanFiction.net
+Hi! My name is Ray, I am the author of a website fictionhub[dot]io - I want it to become a great place for writers to share their stories, find the audience, and discover awesome fiction.
+
+I have recently read "[Pulse]", and I thought it was absolutely brilliant and awesome. It is exactly the kind of story I would like to see in our community, so I wanted to ask if you would like to publish it on to Fiction Hub(with a link to the original story and to your profile). The story would be shared with our subscribers, and I expect it will be read by at least 8-12 thousand people during the next few months. 
+
+I think our users would really enjoy reading your story, and I would be extremely happy if you would agree to share it with our community. Please let me know what you think! =)
+
+Also, if you have some time - it would be amazing if you could let me know what you think about the website. I want it to be the perfect place for people like you to share stories and hang out, so if you have any thoughts or feedback about it - it would really help me to improve this project.
+
+
 **** Stories
 Hi! My name is Ray, I have built a website [fictionhub.io](http://fictionhub.io) - I want it to become a great place for writers to share their stories, find the audience, and discover awesome fiction.
      
@@ -98,3 +118,13 @@ New York
 Vancouver, BC V5T 0C6
 V5T 0C6
 Canada
+
+
+
+
+ <!-- more -->
+ 
+<div class="panel">
+Story by <a href="http://alexanderwales.com/">Alexander Wales</a>. <br/>
+<a href="http://alexanderwales.com">http://alexanderwales.com</a>
+</div>
