Src for users and subscribers.

--- a/assets/socialmedia.org
+++ b/assets/socialmedia.org
@@ -108,6 +108,16 @@ If you want, you can login into your account with username "mati" and a password
 If you'd like to change anything - let me know =)
 
 * Reddit
+** Submitted
+/r/scifi - 333k
+The Metropolitan Man - a brilliant SciFi story. Superman has arrived in Metropolis. Lex Luthor, the villain protagonist, is coming to grips with the arrival of an alien god.   
+https://www.reddit.com/r/scifi/comments/6j2oue/the_metropolitan_man_a_brilliant_scifi_story/djbeo0b/?context=3
+90 upvotes (25 bought, 65 organic), 405 views
+
+/r/fantasy - 179k subscribers
+Mother of Learning - a mage in training finds himself repeatedly reliving the same month. 'Groundhog's day' style setup in a fantasy world
+https://www.reddit.com/r/Fantasy/comments/6iosyk/mother_of_learning_a_mage_in_training_finds/
+320 uvpotes (25 bought, 295 organic).
 ** General Writing  
 /r/Screenwriting
 /r/Writing
