--- a/assets/socialmedia.org
+++ b/assets/socialmedia.org
@@ -117,7 +117,17 @@ https://www.reddit.com/r/scifi/comments/6j2oue/the_metropolitan_man_a_brilliant_
 /r/fantasy - 179k subscribers
 Mother of Learning - a mage in training finds himself repeatedly reliving the same month. 'Groundhog's day' style setup in a fantasy world
 https://www.reddit.com/r/Fantasy/comments/6iosyk/mother_of_learning_a_mage_in_training_finds/
-320 uvpotes (25 bought, 295 organic).
+320 uvpotes (25 bought, 295 organic), 3.5k views
+
+/r/danganronpa - 12k
+Light in Despair's Darkness - awesome Danganronpa fanfic, highly recommend it!
+https://www.reddit.com/r/danganronpa/comments/6j2xx0/light_in_despairs_darkness_awesome_danganronpa/
+28 upvotes. (10? bought, 18 organic), 277 views
+
+/r/naruto - 94k
+I've just discovered Lighting Up the Dark - brilliant Naruto fanfiction inspired by HPMOR. I think you guys will love it!
+25 upvotes, 206 views, link removed.
+
 ** General Writing  
 /r/Screenwriting
 /r/Writing
@@ -194,3 +204,18 @@ Canada
 Story by <a href="http://alexanderwales.com/">Alexander Wales</a>. <br/>
 <a href="http://alexanderwales.com">http://alexanderwales.com</a>
 </div>
+* lumenwrites
+Submit prompts - replies, send upvotes.
+----
+Liked this story? Read more on my blog:
+https://lumenwrites.com
+
+Liked this story? Come check out my blog to read more!
+https://lumenwrites.com
+* Affiliates
+Amazon dashboard:
+https://affiliate-program.amazon.com/home
+Udemy dashboard:
+https://dashboard.linkshare.com/Advertiser/
+links:
+http://cli.linksynergy.com/cli/publisher/links/link_list.php?mid=39197&oid=323058&nid=1&type=product
